Committing the work we accomplished tonight... Finalized the JSON code storage. Committing FunctionView, shows flows of object creation (foundation laid for all function flows). Committing InheritanceView. Implemented word highlighting. Auto-parsing of class names. Auto-parsing of function names (need to eliminate duplicates). Auto-parsing of variable names (minor bug remains - getting a few extra artifacts).

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="js/libs/jquery.color.js"></script>
     <script type="text/javascript" src="js/libs/raphael.js"></script>
+    <script type="text/javascript" src="js/znode/findClassnames.js"></script>
     <script type="text/javascript" src="js/znode/variables.js"></script>
     <script type="text/javascript" src="js/znode/readfiles.js"></script>
     <script type="text/javascript" src="js/znode/nodegraph.js"></script>
@@ -65,11 +66,21 @@
     
     <div id="compview">  <!-- added this div -->
       <div id="compviewbox">
-        <div id="compviewheader">Global Variables/Functions </div>
+        <div id="compviewheader">Classes </div>
         <div id="compviewclose">X</div>
       </div>
-      <div id="compviewtxt">
-        <select id="availableVars" onchange="highlightVars(this.options[this.selectedIndex].value)">
+      <div class="compviewtxt">
+        <select id="availableClasses" onchange="highlightVars(this.options[this.selectedIndex].value)">
+          <option value="">Clear selection...</option>
+        </select>
+      </div>
+      <div class="compviewtxt">
+        <select id="availableFunctions" onchange="highlightVars(this.options[this.selectedIndex].value)">
+          <option value="">Clear selection...</option>
+        </select>
+      </div>
+      <div class="compviewtxt">
+        <select id="availableVariables" onchange="highlightVars(this.options[this.selectedIndex].value)">
           <option value="">Clear selection...</option>
         </select>
       </div>
@@ -79,16 +90,33 @@
       var graph; // declared here globally.
       document.getElementById('readfiles').addEventListener('change', handleFileSelect, false);
       function highlightVars(whichString) {
-        //var tmp = $("#varname").val();
         // NEED TO ADD IN AN ALERT IF NO MATCHES!
         clearHighlights();
         if (whichString.length > 0) {
-          var nodesfound = $("pre:contains(" + whichString + ")").parent().show().parent().css('background-color','yellow');
+          var nodesfound = $("pre:contains(" + whichString + ")").each(function() {
+            var temp = new String;
+            temp = $(this).text();
+            var regex = new RegExp(whichString, "g");
+            temp = temp.replace(regex,"<span style='background-color:yellow'>" + whichString + "</span>");
+            $(this).html(temp);
+            $(this).parent().show();
+            $(this).parent().parent().css('background-color','yellow');
+          });
         }
+        //if (whichString.length > 0) {
+        //  var nodesfound = $("pre:contains(" + whichString + ")").parent().show().parent().css('background-color','yellow');
+        //}
       }
       
       function clearHighlights() {
-        var nodesfound = $(".node").css('background-color','white');    
+        // reset all yellow colored backgrounds to white!!!
+        var nodesfound = $(".node").css('background-color','white');
+        // get rid of ALL the <span> nodes, replacing their contents back inline.
+        var nodesHighlighted = $("span").each(function() {
+          var temp = new String;
+          temp = $(this).text();
+          $(this).replaceWith(temp);
+        });
       }
     </script>
 
